aggiunto testo mancante ultimo paragrafo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ Tutto iniziò come un semplice hobby, dall’esigenza di Torvalds di trovare un 
 
 
 La storia di Linux: le tappe
+La storia di Linux è fatta di importanti tappe. Ecco gli ultimi 30 anni in breve del sistema operativo aperto lanciato da uno studente di informatica:
+
 1991: Linus Torvalds annuncia la nascita di Linux
 1991: Torvalds rilascia il primo kernel Linux
 1993: viene rilascia Slackware Linux
